tests/pass/10_static_method_uses_params.zn
foreign u0 printf(*char)

struct Greeter {
    i32 x
}

u0 Greeter::say(*char msg) {
    printf(msg)
}

i32 main() {
    Greeter::say("hello\n")
    Greeter::say("world\n")
    return 0
}
