tests/fail/02_struct_errors.zn
foreign u0 printf(*char)

struct Greeter {
    f32 p
}

for Greeter {
    u0 say() { printf("Hi\n") }
}

i32 main() {
    Ghost::method()
    Greeter::unknown()
    return 0
}
